💄 [stats] Make style global & Clean unused files

--- a/stats/src/pages/index.astro
+++ b/stats/src/pages/index.astro
@@ -7,6 +7,7 @@ import Statistics from '../components/Statistics.astro';
     <meta name="viewport" content="width=device-width">
     <title>Road Completion</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="/style/global.css">
 </head>
 <body>
     <main>
