Update report page

--- a/report/src/components/Nav.astro
+++ b/report/src/components/Nav.astro
@@ -2,7 +2,7 @@
   <ul>
     <li>🇧🇪 <a href="#be-brussels">Brussels, Belgium</a> 🤖</li>
     <li>🇧🇪 <a href="#be-flanders">Flanders, Belgium</a> 🤖</li>
-    <li>🇧🇪 <a href="#be-wallonia-bra">Wallonia, Belgium</a></li>
+    <li>🇧🇪 <a href="#be-wallonia-bra">Wallonia, Belgium</a> 🤖</li>
     <li>🇱🇺 <a href="#lu-luxembourg">Luxembourg</a> 🤖</li>
     <li>🇳🇱 <a href="#nl-netherlands">Netherlands</a> 🤖</li>
     <li>🇽🇰 <a href="#xk-kosovo">Kosovo</a></li>
