--- a/report/src/pages/index.astro
+++ b/report/src/pages/index.astro
@@ -33,11 +33,11 @@ let title = 'Road Completion';
 
       <Report id="be-brussels" title="Brussels (Bruxelles/Brussel)" ga="belgium-brussels" />
       <Report id="be-flanders" title="Flanders (Vlaanderen)" ga="belgium-flanders" />
-      <Report id="be-wallonia-bra" title="Wallonia (Wallonie) - Brabant-Wallon" />
-      <Report id="be-wallonia-hai" title="Wallonia (Wallonie) - Hainaut" />
-      <Report id="be-wallonia-lie" title="Wallonia (Wallonie) - Liège" />
-      <Report id="be-wallonia-lux" title="Wallonia (Wallonie) - Luxembourg" />
-      <Report id="be-wallonia-nam" title="Wallonia (Wallonie) - Namur" />
+      <Report id="be-wallonia-bra" title="Wallonia (Wallonie) - Brabant-Wallon" ga="belgium-wallonia" />
+      <Report id="be-wallonia-hai" title="Wallonia (Wallonie) - Hainaut" ga="belgium-wallonia" />
+      <Report id="be-wallonia-lie" title="Wallonia (Wallonie) - Liège" ga="belgium-wallonia" />
+      <Report id="be-wallonia-lux" title="Wallonia (Wallonie) - Luxembourg" ga="belgium-wallonia" />
+      <Report id="be-wallonia-nam" title="Wallonia (Wallonie) - Namur" ga="belgium-wallonia" />
     </section>
 
     <section>
