--- a/report/src/pages/index.astro
+++ b/report/src/pages/index.astro
@@ -16,7 +16,7 @@ let title = 'Road Completion';
   <title>{title}</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  <style global>
+  <style is:global>
     @import "../styles/global.css";
   </style>
 </head>
